# smoke_and_mirrors

./: CMakeLists.txt  README.md
francesca_trial/: CMakeLists.txt  CMakeLists.txt~
francesca_trial/solution/: a3
francesca_trial/src/: clothsystem.cpp  clothsystem.cpp~  clothsystem.h  clothsystem.h~  main.cpp  main.cpp~  pendulumsystem.cpp  pendulumsystem.cpp~  pendulumsystem.h  pendulumsystem.h~  prerender.cpp  prerender.cpp~  prerender.h  prerender.h~  rigidBall.cpp  rigidBall.cpp~  rigidBall.h~  simplesystem.cpp  simplesystem.cpp~  timestepper.cpp  timestepper.cpp~  timestepper.h  timestepper.h~  vertexrecorder.cpp~
linuxBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  simulation
linuxBuild/vecmath/: Makefile  cmake_install.cmake
src/: clothsystem.cpp  clothsystem.cpp~  clothsystem.h  main.cpp  mirror.cpp  mirror.h  pendulumsystem.cpp  pendulumsystem.h  rigidBall.cpp  rigidBall.h  simplesystem.cpp  smokeSystem.cpp  smokeSystem.h  timestepper.cpp
